--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>NeuroProfit</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <h1>NeuroProfit 🚀</h1>
+    <p>Meu projeto está online!</p>
 
+    <script src="js/script.js"></script>
+</body>
+</html>
