--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>NeuroProfit</title>
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>NeuroProfit - Login</title>
+<link rel="stylesheet" href="CSS/style.css">
 </head>
-<body>
-    <h1>NeuroProfit 🚀</h1>
-    <p>Meu projeto está online!</p>
+<body class="gradient">
 
-    <script src="js/script.js"></script>
+<div class="login-box">
+    <h1>NeuroProfit 🚀</h1>
+    <p>Sistema inteligente de performance</p>
+
+    <input type="email" placeholder="Seu email">
+    <input type="password" placeholder="Sua senha">
+
+    <button onclick="login()">Entrar</button>
+
+    <p class="plano">Plano atual: <strong>FREE</strong></p>
+</div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
